--- a/main.html
+++ b/main.html
@@ -7,7 +7,24 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+<div class="container">
+  <div class="panel active" id="panel-1">
+    <h3>Explore the world</h3>
+  </div>
+  <div class="panel" id="panel-2">
+    <h3>Wild Forest</h3>
+  </div>
+  <div class="panel" id="panel-3">
+    <h3>Sunny Beach</h3>
+  </div>
+  <div class="panel" id="panel-4">
+    <h3>City on Winter</h3>
+  </div>
+  <div class="panel" id="panel-5">
+    <h3>Mountain Cloud</h3>
+  </div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
